fix: unnecessary scrollbar

--- a/src/Components/DecksView/DecksView.module.css
+++ b/src/Components/DecksView/DecksView.module.css
@@ -4,7 +4,6 @@
 }
 
 .decks {
-    overflow: scroll;
     overflow-x: hidden;
     height: 100%;
     background: #F0F3FA;
